--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -21,7 +21,7 @@
               <div class="card-body">
                 <h4 class="h5 card-title">{{ meal[1] }}</h4>
                 <p class="card-text">{{ meal[2] }}</p>
-                <a href="/addtocart?meal_id={{ meal[3] }}" class="btn btn-danger">В корзину</a>
+                <a href="/addtocart/{{ meal[3] }}" class="btn btn-danger">В корзину</a>
               </div>
             </div>
           </div>
