--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -2,8 +2,9 @@
 {% block container %}
   <main class="container">
     <h1 class="h3 my-4">Корзина</h1>
-
+    {% if not delete_id == 0 %}
     <div class="alert alert-warning" role="alert">Блюдо удалено из корзины</div>
+    {% endif %}
     <div class="alert alert-warning" role="alert">Чтобы сделать заказ – <a href="/login.html">войдите</a> или <a href="/register.html">зарегистрируйтесь</a></div>
 
     <div class="row mt-5">
@@ -35,8 +36,8 @@
               <input type="text" class="font-weight-bold form-control" id="name">
             </div>
 
-           <input type="hidden" value = "875" name="order_summ">
-           <input type="hidden" value="[1,3,4]" name="order_cart">
+           <input type="hidden" value = '{% if session.get("sum") is none %}0{% else %}{{ session.get("sum")}}{% endif %}' name="order_summ">
+           <input type="hidden" value='{{ session["cart"] }}' name="order_cart">
 
 
           </form>
@@ -52,30 +53,18 @@
 
       <div class="col-1"></div>
       <div class="col-7">
-        <h4 class="mb-3 col-7 mb-5">3 блюда в корзине</h4>
+        <h4 class="mb-3 col-7 mb-5">{{ cart_rows|length }} блюда в корзине</h4>
         <table class="table">
           <tbody>
+          {% for cart_row in cart_rows %}
             <tr>
-              <th scope="row">Ролл "Хомский"</th>
+              <th scope="row">{{ cart_row[0] }}</th>
               <td></td>
               <td>1</td>
-              <td>315</td>
+              <td>{{ cart_row[1] }}</td>
               <td><a class="text-danger" href="#">Удалить</a></td>
             </tr>
-            <tr>
-              <th scope="row">Бургер 404</th>
-              <td></td>
-              <td>1</td>
-              <td>250</td>
-              <td><a class="text-danger" href="#">Удалить</a></td>
-            </tr>
-            <tr>
-              <th scope="row">Пица "Армин"</th>
-              <td></td>
-              <td>1</td>
-              <td>310</td>
-              <td><a class="text-danger" href="#">Удалить</a></td>
-            </tr>
+          {% endfor %}
           </tbody>
         </table>
         <hr>
